<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mlsdev.recipefinder.view.recipedetails.RecipeViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="10dp"
                app:expandedTitleMarginStart="10dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="@drawable/recipe_item_title_bg"
                    android:scaleType="centerCrop"
                    android:transitionName="sharedImage"
                    app:imageUrl="@{viewModel.recipeImageUrl}"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:transitionName="sharedText"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:title="@{viewModel.recipeTitle}" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <android.support.v7.widget.CardView style="@style/RecipeDetailsBlockStyle">

                    <LinearLayout style="@style/RecipeDetailsBlockTextWrapperStyle">

                        <TextView
                            style="@style/BaseTextViewStyle.RecipeLabelStyle"
                            android:text="@string/label_health_labels" />

                        <TextView
                            android:id="@+id/tv_health_labels"
                            style="@style/BaseTextViewStyle"
                            android:text="@{viewModel.recipeHealthLabels}"
                            android:textSize="16sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView style="@style/RecipeDetailsBlockStyle">

                    <LinearLayout style="@style/RecipeDetailsBlockTextWrapperStyle">

                        <TextView
                            style="@style/BaseTextViewStyle.RecipeLabelStyle"
                            android:text="@string/label_diet_labels" />

                        <TextView
                            android:id="@+id/tv_diet_labels"
                            style="@style/BaseTextViewStyle"
                            android:text="@{viewModel.recipeDietLabels}"
                            android:textSize="16sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView style="@style/RecipeDetailsBlockStyle">

                    <LinearLayout style="@style/RecipeDetailsBlockTextWrapperStyle">

                        <TextView
                            style="@style/BaseTextViewStyle.RecipeLabelStyle"
                            android:text="@string/label_ingredients" />

                        <TextView
                            android:id="@+id/tv_ingredients"
                            style="@style/BaseTextViewStyle"
                            android:text="@{viewModel.recipeIngredients}"
                            android:textSize="16sp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="@dimen/appbar_height"
            android:layout_height="@dimen/appbar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:onClick="@{viewModel.onFavoriteButtonClick}"
            android:scaleType="centerInside"
            android:src="@{viewModel.favoriteImageStateChecked ? @drawable/ic_favorite_checked : @drawable/ic_favorite_normal}"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|end|right" />

    </android.support.design.widget.CoordinatorLayout>
</layout>