<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mlsdev.recipefinder.view.favoriterecipes.FavoritesViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rl_favorite_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_recipe_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_empty_list_view"
            style="@style/BaseTextViewStyle.EmptyListView"
            android:layout_centerInParent="true"
            android:text="@string/label_no_favorites"
            app:visibility="@{viewModel.emptyViewVisibility}"/>

    </RelativeLayout>
</layout>